# rsb_video_bridge

./: CMakeLists.txt  README.md  package.xml
launch/: pepper_front_cam.launch  video_bridge.launch
src/: video_bridge.cpp
