<?xml version="1.0"?>
<package>
  <name>rsb_video_bridge</name>
  <version>0.0.1</version>
  <description>A rsb bridge for ROS images</description>

  <author>Luca Lach</author>
  <maintainer email="llach@techfak.uni-bielefeld.de">Luca Lach</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
